Bug 754233 - Handle negative layer coordinate in Tiled layers. r=ajuma